# ppparser

./: .gitignore  Cargo.toml  Grammar.dsl  README.md  Readme.md  a.out  build.rs  log.txt  newGrammar.dsl  update_parsers.sh
.cargo/: config.toml
.github/workflows/: rust.yml
C_parser/: C_spec_from_MS
Docs/: PerfTesting.md
LR/: Cargo.toml
LR/src/: lib.rs
LR_recursion_playarea/: Cargo.toml
LR_recursion_playarea/src/: lib.rs
benches/: ppparser_dsl_benchmark.rs
cache/: Cargo.toml
cache/src/: allow_direct_left_recursion_cache.rs  btreemap_cache.rs  cache_trait.rs  context.rs  deny_left_recursion_cache.rs  direct_left_recursion_cache.rs  indirect_left_recursion_cache.rs  lib.rs  my_cache1.rs  my_cache2.rs  my_cache3.rs  my_cache4.rs  my_cache5.rs  old_cache.rs  vbasic_direct_left_recursion_cache.rs  vbasic_indirect_left_recursion_cache.rs
calculator_parser/: calculator.dsl
calculator_parser/tests/: test.rs
data/: Cargo.toml
example_1/: README.md
example_1/src/: lib.rs
example_1_parser/src/: cache.rs  context.rs  main.rs  parser.rs  publisher.rs  rules.rs  var_name.rs
example_2/: Cargo.toml  README.md
example_2/src/: lib.rs
example_2_parser/src/: context.rs  main.rs  parse.rs  parser.rs  publisher.rs  rules.rs  var_name.rs
example_3_basic_maths/: README.md  example_3_basic_maths.dsl
example_3_basic_maths/src/: lib.rs  test_number.rs
example_3_basic_maths_parser/src/: cache.rs  lib.rs  main.rs  parse.rs  parser.rs  publisher.rs  rules.rs  source.rs
example_4_full_maths/: Cargo.toml  README.md  example_4_full_maths.dsl
example_4_full_maths/src/: lib.rs  (+1 more)
example_4_full_maths_parser/: Cargo.toml
generator/: Cargo.toml
grammar_generator/: .rustc_info.json  Cargo.toml
grammar_parser/: Cargo.toml
grammar_runner/: Cargo.toml
grammar_runner/src/: data.rs  main.rs  old_main.txt  utils.rs
java_parser/: Cargo.toml
java_parser/src/: chapter_18_grammar.txt  from_all_chapters_Grammar.txt  generate_keywords.py  generate_operators.py  java_grammar_def_parser.txt  java_grammar_definition_parser.txt  lib.rs
json_parser/: json.dsl
left_recursion_testing/: Cargo.toml
my_parser/: Cargo.toml
parser/: Cargo.toml  Grammar.dsl  Grammar.txt  README.md  Readme.md  build.rs
parser/benches/: ppparser_dsl_benchmark.rs
parser/src/: Grammar.txt  and_predicate.rs  cache.rs  context.rs  generated_parser_core.rs  lib.rs  main.rs  not_predicate.rs  one_or_more.rs  optional.rs  ordered_choice.rs  output_stack.rs  parse.rs  parser.rs  parser_core.rs  publisher.rs  publisher_trait.rs  rules.rs  sample_main.txt  sequence.rs  source.rs  subexpression.rs  terminal.rs  test_grammar.txt  user_state.rs  var_name.rs  zero_or_more.rs
parser/tests/: integration_tests.rs  parser.rs  test_direct_left_recursion_complex.rs  tests_parser.rs  tests_parser_basic.rs  tests_parser_complex.rs
parser/tests/test_data/: Grammar.txt
parser_core/: Cargo.toml
publisher/: Cargo.toml
rules/: Cargo.toml
runner/: Cargo.toml
src/: Grammar.txt  and_predicate.rs  cache.rs  context.rs  example_with_optimizations_parser.rs  examples.rs  generated_parser_core.rs  latest.rs  latest2.rs  lib.rs  main.rs  main2.rs  main3.rs  not_predicate.rs  one_or_more.rs  optional.rs  ordered_choice.rs  output_stack.rs  parse.rs  parser.rs  parser_core.rs  publisher.rs  rules.rs  sequence.rs  source.rs  subexpression.rs  terminal.rs  test.rs  thing.rs  thing2_may_work.rs  thing3.rs  utils.rs  var_name.rs  zero_or_more.rs
stack/: Cargo.toml
test-grammar-proc-macro/: Cargo.toml  README.md
tests/: integration_tests.rs  parser.rs
watcher/: Cargo.toml  README.md
(+316 files in other folders)
