[workspace]
resolver = "2"
members = ["parser", 
"generator", "runner", 
"example_1_parser", "example_1", 
"example_2", "example_2_parser", 
"example_3_basic_maths", "example_3_basic_maths_parser"]

[profile.dev]
panic = "unwind"
debug = true

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
