[workspace]
resolver = "2"
members = [ "parser", 
            "generator", 
            "runner", 
            "examples/example_1_parser", 
            "examples/example_1", 
            "examples/example_2", 
            "examples/example_2_parser", 
            "examples/example_3_basic_maths", 
            "examples/example_3_basic_maths_parser",
            "examples/example_4_full_maths",
            "examples/example_4_full_maths_parser"]

[profile.dev]
panic = "unwind"
debug = true

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
