[workspace]
resolver = "2"
members = [ "parser", 
            "generator", 
            "runner", 
            "examples/example_1_parser", 
            "examples/example_1", 
            "examples/example_2", 
            "examples/example_2_parser", 
            "examples/example_3_basic_maths", 
            "examples/example_3_basic_maths_parser",
            "examples/example_4_full_maths",
            "examples/example_4_full_maths_parser", 
            "examples/example_5_lr_num", 
            "examples/example_5_lr_num_parser", 
            "examples/example_6_term_and_fact", 
            "examples/example_6_term_and_fact_parser", 
            "examples/example_7_indirect_lr_num", 
            "examples/example_7_indirect_lr_num_parser", 
            "examples/example_8_indirect_lr_3_level", 
            "examples/example_8_indirect_lr_3_level_parser", 
            "examples/example_9_indirect_lr_5_level",
            "examples/example_9_indirect_lr_5_level_parser", 
            "examples/example_10_basic_bench",
            "examples/example_10_basic_bench_parser",
            "examples/experimental_parser",
            "examples/c_parser", 
            "test-grammar-proc-macro",
            ]

[profile.dev]
panic = "unwind"
debug = true

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
