[package]
name = "grammar_runner"
version = "0.6.0"
edition = "2021"
default-run = "grammar_runner"

[dependencies]
grammar_parser = { path = "../grammar_parser" }
cache = { path = "../cache" }
publisher = {path = "../publisher"}
clap = { version = "4.5.9", features = ["derive"] }
anyhow = "1.0.86"
