[package]
name = "java_parser"
version = "0.6.0"
edition = "2021"
[dependencies]
grammar_parser = { path = "../grammar_parser"}
parser_core = { path = "../parser_core" }
cache = { path = "../cache" }
publisher = {path = "../publisher"}
rules = {path = "../rules"}
grammar_generator = {path = "../grammar_generator"}
