[package]
name = "parser"
version = "0.6.0"
edition = "2021"
[dependencies]
grammar_parser = {path = "../grammar_parser"}
cache = {path = "../cache"}
publisher = {path = "../publisher"}
rules = {path = "../rules"}
parser_core = {path = "../parser_core"}

clap = { version = "4.5.9", features = ["derive"] }
anyhow = "1.0.86"